Sorgente/src/objects/Synchronizer__c.object
<CustomObject>
    <fields>
        <fullName>MigrationDate__c</fullName>
        <label>MigrationDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <label>ObjectType</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuovo Ordine</fullName>
                </value>
                <value>
                    <fullName>Codici AWB</fullName>
                </value>
                <value>
                    <fullName>Data firma contratto</fullName>
                </value>
                <value>
                    <fullName>Aggiornamento preparto</fullName>
                </value>
                <value>
                    <fullName>Aggiornamento parto</fullName>
                </value>
                <value>
                    <fullName>Spedizione a cliente</fullName>
                </value>
                <value>
                    <fullName>Spedizione a laboratorio</fullName>
                </value>
                <value>
                    <fullName>Aggiornamento prodotti</fullName>
                </value>
                <value>
                    <fullName>Aggiornamento Ordine</fullName>
                </value>
                <value>
                    <fullName>Aggiornamento dati</fullName>
                </value>
                <value>
                    <fullName>Prospect perso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Synchronizer</label>
    <nameField>
        <displayFormat>SY-{00000000}</displayFormat>
        <label>Nome Synchronizer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Synchronizers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>